# support-agent-v2

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: sample_ticket.json
scripts/: healthcheck.py  run_agent.py  run_api.py
support_agent/: __init__.py
support_agent/agent/: __init__.py  graph.py  investigation_rules.py  nodes.py  routing.py  state.py
support_agent/api/: app.py
support_agent/config/: settings.py
support_agent/db/: __init__.py  catalog.py  client.py  repositories.py
support_agent/llm/: __init__.py  client.py  parser.py  prompts.py
support_agent/retrieval/: __init__.py  embedder.py  formatter.py  pinecone_client.py  retriever.py
support_agent/runtime/: __init__.py  errors.py  logging.py  retry.py
support_agent/schemas/: __init__.py  agent.py  session.py  ticket.py  tool.py
support_agent/services/: __init__.py  bootstrap.py  healthcheck.py  pinot_service.py  session_store.py  support_ai_sessions.py  vehicle_service.py
support_agent/tools/: __init__.py  base.py  db_tools.py
support_agent_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_graph.py  test_llm_client.py  test_parser.py  test_pinot_service.py  test_routing.py  test_support_ai_sessions.py  test_tools.py  test_vehicle_service.py
