[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-agent-v2"
version = "0.1.0"
description = "Production-friendly support investigation agent using LangGraph, Ollama, Pinecone, and read-only Postgres access."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pinecone>=5.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["support_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
